atm-prod-gitops/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-atm-svc
  namespace: atm-prod
spec:
  type: NodePort
  selector:
    app: django-backend
  ports:
  - name: http
    port: 80
    targetPort: 8003
    nodePort: 30080

#http://192.168.49.2:30080/
